--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -63,23 +63,23 @@ android {
         multiDexEnabled true
     }
 
-    signingConfigs {
+   /* signingConfigs {
        release {
            keyAlias keystoreProperties['keyAlias']
            keyPassword keystoreProperties['keyPassword']
            storeFile file(keystoreProperties['storeFile'])
            storePassword keystoreProperties['storePassword']
        }
-    }
+    }*/
 
     buildTypes {
-        // debug {
-        //     signingConfig signingConfigs.debug
-        // }
+         debug {
+             signingConfig signingConfigs.debug
+         }
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.release
+            signingConfig signingConfigs.debug
         }
     }
 
