--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,6 @@ dependencies:
   plaid_flutter: ^3.1.0
   flutter_chat_ui: ^1.6.6
   qr_code_scanner: ^1.0.1
-  flutter_google_places: ^0.3.0
   sticky_grouped_list: ^3.1.0
   geocoding: ^2.1.0
   flutter_typeahead: ^3.1.3
@@ -78,6 +77,7 @@ dependencies:
   new_version_plus: ^0.0.9
   url_launcher: ^6.1.10
   searchfield: ^0.8.4
+  google_places_flutter: ^2.0.6
   
 
 dev_dependencies:
